# RayTracer

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
imgs/octree_stuff/: time_1623913907.ppm  to_png.sh
include/: Camera.h  Color.h  Image.h  ImplicitShape.h  Light.h  Octree.h  Ray.h  Renderer.h  Scene.h  SceneObject.h  Tracer.h  Window.h  camera.h  color.h  geometry.h  mat3.h  mat4.h  mat44.h  ray.h  scenes.h  utilities.h  vec3.h
src/: Camera.cpp  Image.cpp  Octree.cpp  Renderer.cpp  Scene.cpp  SceneObject.cpp  Tracer.cpp  Window.cpp  main.cpp  scenes.cpp
